kubernetes/main/apps/frontend/omni/app/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: omni-kube-websocket
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Host: ""
      X-Forwarded-For: ""
      X-Real-IP: ""
