kubernetes/main/apps/frontend/omni/app/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: omni-main-http
  annotations:
    external-dns.kubernetes.io/target: internal.haynesops
    kubernetes.io/ingress.class: traefik-internal
    gethomepage.dev/href: "https://omni.haynesops.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Omni
    gethomepage.dev/description: Talos cluster management
    gethomepage.dev/icon: kubernetes
    gethomepage.dev/app: omni
    gethomepage.dev/siteMonitor: "https://omni.haynesops.com"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`omni.haynesops.com`)
      kind: Rule
      services:
        - name: omni
          port: 8080
          scheme: https
          serversTransport: omni-long-timeouts
          passHostHeader: true
  tls:
    secretName: certificate-haynesops
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: omni-machine-grpc
  annotations:
    external-dns.kubernetes.io/target: internal.haynesops
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.omni.haynesops.com`)
      kind: Rule
      services:
        - name: omni
          port: 8090
          scheme: https
          serversTransport: omni-long-timeouts
          passHostHeader: true
  tls:
    secretName: certificate-omni-api-internal
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: omni-kube
  annotations:
    external-dns.kubernetes.io/target: internal.haynesops
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kube.omni.haynesops.com`)
      kind: Rule
      services:
        - name: omni
          port: 8100
          scheme: https
          serversTransport: omni-long-timeouts
          passHostHeader: true
  tls:
    secretName: certificate-omni-kube-internal
